added JS and API key

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/img/sunny_sunshine_weather_2778.png" />
+    <link
+      rel="icon"
+      href="/img/cloudyweather_cloud_inpart_day_wind_thunder_sunny_rain_darkness_nublad_1459.png"
+    />
     <link rel="stylesheet" href="./assets/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,6 +47,6 @@
         <div class="wind">6 kmph</div>
       </div>
     </div>
+    <script src="./assets/script.js"></script>
   </body>
-  <script src="./assets/script.js"></script>
 </html>
