readme, index, html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="card">
       <div class="search">
         <input type="text" class="search-bar" />
-        <button>
+        <button id="search-btn">
           <svg
             stroke="currentColor"
             fill="currentColor"
